crates/ruff_python_parser/tests/snapshots/invalid_syntax@raise_stmt_invalid_exc.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/raise_stmt_invalid_exc.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            13,
        ),
        range: 0..36,
        body: [
            Raise(
                StmtRaise {
                    node_index: NodeIndex(
                        3,
                    ),
                    range: 0..8,
                    exc: Some(
                        Starred(
                            ExprStarred {
                                node_index: NodeIndex(
                                    2,
                                ),
                                range: 6..8,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(
                                            1,
                                        ),
                                        range: 7..8,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                ctx: Load,
                            },
                        ),
                    ),
                    cause: None,
                },
            ),
            Raise(
                StmtRaise {
                    node_index: NodeIndex(
                        7,
                    ),
                    range: 9..22,
                    exc: Some(
                        Yield(
                            ExprYield {
                                node_index: NodeIndex(
                                    6,
                                ),
                                range: 15..22,
                                value: Some(
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                5,
                                            ),
                                            range: 21..22,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            },
                        ),
                    ),
                    cause: None,
                },
            ),
            Raise(
                StmtRaise {
                    node_index: NodeIndex(
                        10,
                    ),
                    range: 23..30,
                    exc: Some(
                        Name(
                            ExprName {
                                node_index: NodeIndex(
                                    9,
                                ),
                                range: 29..30,
                                id: Name("x"),
                                ctx: Load,
                            },
                        ),
                    ),
                    cause: None,
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        12,
                    ),
                    range: 34..35,
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            node_index: NodeIndex(
                                11,
                            ),
                            range: 34..35,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | raise *x
  |       ^^ Syntax Error: Starred expression cannot be used here
2 | raise yield x
3 | raise x := 1
  |


  |
1 | raise *x
2 | raise yield x
  |       ^^^^^^^ Syntax Error: Yield expression cannot be used here
3 | raise x := 1
  |


  |
1 | raise *x
2 | raise yield x
3 | raise x := 1
  |         ^^ Syntax Error: Expected a statement
  |
